<resources>
    <string name="app_name">Trane Tool</string>
    <string name="action_settings">Settings</string>
    <string name="trane_logo">Logo</string>
    <string name="serverip">Server IP</string>
    <string name="sp">Server Port</string>
    <string name="serverport">Server Port</string>
    <string name="connection">Connection Status</string>
    <string name="ipaddress">IP Address</string>
    <string name="port">Port Number</string>
    <string name="portnumber">Server Port Number</string>
    <string name="portnum">Port Number</string>
    <string name="msgdisplay">Message Display</string>
    <string name="logo">trane_logo</string>
    <string name="splashlogo">logo</string>
</resources>
