<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.trane.tranetool.MainActivity"
    android:background="#fefcfc"
    android:gravity="top"
    tools:showIn="@layout/activity_main">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverip"
        android:id="@+id/textView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@+id/infoip"
        android:layout_toLeftOf="@+id/infoip"
        android:textColor="#040404"
        android:layout_marginTop="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/serverport"
        android:id="@+id/textView2"
        android:layout_below="@+id/textView"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="27dp"
        android:layout_alignParentEnd="false"
        android:textColor="#030303"
        android:textAlignment="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ipaddress"
        android:id="@+id/infoip"
        android:allowUndo="false"
        android:background="#020202"
        android:layout_above="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_marginLeft="112dp"
        android:layout_marginStart="112dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:textColor="#fdfbfb"
        android:scrollIndicators="right" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/portnumber"
        android:id="@+id/info"
        android:background="#010101"
        android:layout_alignTop="@+id/textView2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/infoip"
        android:layout_alignStart="@+id/infoip"
        android:textColor="#fdfbfb" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_below="@+id/msg"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/logo"
        android:layout_centerInParent="true"
        android:src="@drawable/trane_logo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/connection"
        android:id="@+id/textView5"
        android:layout_marginTop="40dp"
        android:layout_alignWithParentIfMissing="false"
        android:height="80dp"
        android:background="#020202"
        android:textColor="#fefdfd"
        android:maxLines="1000000000"
        android:scrollbars="vertical"
        android:layout_below="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2"
        android:nestedScrollingEnabled="true" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/msgdisplay"
        android:id="@+id/msg"
        android:height="200dp"
        android:background="#030303"
        android:textColor="#fefdfd"
        android:maxLines="1000000000"
        android:scrollbars="vertical"
        android:layout_below="@+id/textView5"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"
        android:scrollIndicators="right" />

</RelativeLayout>
